add contact app

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -4,7 +4,7 @@
 
 {% block title %}Log Out{% endblock %}
 
-{% block content %}
+{% block page_content %}
 <div class="container">
     <h1>Log Out</h1>
     <p>Are you sure you want to log out?</p>
@@ -15,4 +15,4 @@
         <button class="btn btn-danger" type="submit">Log Out</button>
     </form>
 </div>
-{% endblock content %}
+{% endblock page_content %}
