--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,12 +3,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}letsflyonthewebsky{% endblock title %}</title>
+    <title>{% block head_title %}letsflyonthewebsky{% endblock head_title %}</title>
     <!-- Bootrap -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Roboto front -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% block head_extra %} {% endblock head_extra %}
 </head>
 <body>
     <header>
@@ -18,7 +24,10 @@
             
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-                
+                <a class="p-2 text-dark" href="{% url 'posts' %}">Blog</a>
+                <a class="p-2 text-dark" href="{% url 'posts' %}">Portfolio</a>
+                <a class="p-2 text-dark" href="{% url 'contact' %}">Contact</a>
+
                 {% if user.is_authenticated %}
                 <a class="p-2 text-dark" href="{% url 'account_logout' %}">Log Out</a>
                 {% else %}
@@ -29,13 +38,13 @@
         </div>
     </header>
     <div class="container">
-        {% block content %}
-        {% endblock content %}
+        {% block page_content %}
+        {% endblock page_content %}
     </div>
     <!-- JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
 </body>
 </html>
