--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,6 @@
 
 {% block title %}About{% endblock title %}
 
-{% block content %}
+{% block page_content %}
 <h1>About Page</h1>
-{% endblock content %}
+{% endblock page_content %}
