--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,7 +4,7 @@
 
 {% block title %}Log In{% endblock title %}
 
-{% block content %}
+{% block page_content %}
 <h2>Log In</h2>
 <form method="post">
     {% csrf_token %}
@@ -12,4 +12,4 @@
     
     <button class="btn btn-success" type="submit">Log In</button>
 </form>
-{% endblock content %}
+{% endblock page_content %}
