--- a/templates/blog/blog_category.html
+++ b/templates/blog/blog_category.html
@@ -9,7 +9,7 @@
           <!-- Blog Entries Column -->
           <div class="col-md-12 left">
             {% for post in posts %}
-              <div class="card mb-4">
+              <div class="card mb-4 animated animatedFadeInUp fadeInUp">
                 {% if post.main_image %}
                   <img class="card-img-top" src="{{ post.main_image.url }}" />
                 {% endif %}
