--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,186 @@
-h1 {
-    color: red;
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,800|Roboto+Slab:300);
+
+*, *:before, *:after {
+	margin: 0;
+	padding: 0;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	transition: 0.4s ease all;
 }
-img .cover {
-    height: 200px;
-    width: auto;
+html {
+	height: 100%;
+	font-size: 100%;
+}
+
+body {
+	display: block;
+	background: #eee;
+	color: #000000;
+}
+.container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.card-img-right {
+	height: 100%;
+	border-radius: 0 3px 3px 0;
+}
+  
+.flex-auto {
+	-ms-flex: 0 0 auto;
+	-webkit-box-flex: 0;
+	flex: 0 0 auto;
+}
+  
+
+/* blog-main */
+.blog-main{
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+@media (min-width: 768px){
+	.col-md-4 {
+        -ms-flex: 0 0 33.333333%;
+        flex: 0 0 33.333333%;
+        max-width: 33.333333%;
+    }
+}
+
+/* END blog-main */
+/* Header */
+.sticky-nav {
+  min-height: 10vh;
+  z-index: 10;
+}
+.sticky {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  border-top: 0;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  color: #000000;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+/* START Sidebar: make-me-sticky  */
+.blog-sidebar{
+	width: 100%;
+	height: 100%;
+}
+
+.make-me-sticky {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 10vh;
+  	/* padding: 0 10px; */
+}
+/* END Sidebar: make-me-sticky  */
+
+.card-title {
+	margin-bottom: 0;
+	font-size: 1.5rem;
+	font-weight: 400;
+	color: #000;
+}
+.card-text {
+	font-size: 1.1rem;
+	color: #999;
+}
+  
+  @media (min-width: 40em) {
+	.card-title {
+	  font-size: 2rem;
+	}
+  }
+  
+  /* Pagination */
+  .blog-pagination {
+	margin-bottom: 4rem;
+  }
+  .blog-pagination > .btn {
+	border-radius: 2rem;
+  }
+  
+  /*
+   * Blog posts
+   */
+  .blog-post {
+	margin: 3%;
+	margin-bottom: 4rem;
+  }
+ 
+  /*
+   * Footer
+   */
+  .blog-footer {
+	padding: 2.5rem 0;
+	color: #000000;
+	text-align: center;
+	background-color: #fcfcfc;
+	border-top: .05rem solid #e5e5e5;
+  }
+  .blog-footer p:last-child {
+	margin-bottom: 0;
+  }
+
+
+
+  /* Animation */
+
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
+@-webkit-keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
+    }
+}
+
+.animated {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInUp {
+    opacity: 0
+}
+
+.fadeInUp {
+    opacity: 0;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
 }
