--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,33 +14,45 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    
     {% block head_extra %} {% endblock head_extra %}
 </head>
 <body>
-    <header>
-        <!-- Fixed navbar -->
-        <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-            <a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto font-weight-normal">letsflyonthewebsky</a>
-            
-            <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-                <a class="p-2 text-dark" href="{% url 'posts' %}">Blog</a>
-                <a class="p-2 text-dark" href="{% url 'posts' %}">Portfolio</a>
-                <a class="p-2 text-dark" href="{% url 'contact' %}">Contact</a>
+    <div class="container-fluid">
+        {% include 'header.html' %}
 
-                {% if user.is_authenticated %}
-                <a class="p-2 text-dark" href="{% url 'account_logout' %}">Log Out</a>
-                {% else %}
-                <a class="p-2 text-dark" href="{% url 'account_login' %}">Log In</a>
-                <a class="btn btn-outline-primary" href="{% url 'account_signup' %}">Sign Up</a>
-                {% endif %}
-            </nav>
-        </div>
-    </header>
-    <div class="container">
-        {% block page_content %}
-        {% endblock page_content %}
-    </div>
+    <main role="main" class="container-fluid">
+        <div class="row">
+          <div class="col-md-8 blog-main">
+            <div class="blog-post">
+
+                {% block page_content %}
+                {% endblock page_content %}
+                
+            </div><!-- /.blog-post -->
+
+        </div><!-- /.blog-main -->
+
+        <aside class="col-md-4">
+            <div class="blog-sidebar">
+                <div class="make-me-sticky">
+                  <div class="p-3 mb-2 rounded">
+                    <h3 class="text-center">Latest Posts</h3>
+                      {% include 'sidebar.html' %}
+                  </div>
+                </div>
+            </div>
+          </aside><!-- /.blog-sidebar -->
+  
+        </div><!-- /.row -->
+  
+      </main>
+  
+     </div>
+
+     <footer class="blog-footer">
+      {% include 'footer.html' %}     
+    </footer>
     <!-- JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
