--- a/templates/blog/search_results.html
+++ b/templates/blog/search_results.html
@@ -10,7 +10,7 @@
   
       <div class="col-md-6">
         
-          <div class="card mb-3 anim-card">
+          <div class="card mb-3 animated animatedFadeInUp fadeInUp">
               <div class="card-body">
                 <h3 class="card-title"><a href="{% url 'blog_detail' post.slug %}">{{ post.title }}</a></h3>
                 <small class="text-muted">
