--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-      <div class="row py-5">
+      <div class="row py-3">
         <div class="col-md-4 py-3">
           <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
@@ -20,10 +20,10 @@
       </form>
         </div>
       </div>
-      <div class="row py-5">
+      <div class="row pt-5">
         <div class="col-sm">
           <!-- <div class="d-inline"> -->
-            <span><a href="#"><i class="fab fa-facebook"></i></a></span>
+            <span><a href="https://www.facebook.com/Letsflyonthewebsky-113843516993221/"><i class="fab fa-facebook"></i></a></span>
             <span><a href="#"><i class="fab fa-twitter"></i></a></span>
             <span><a href="#"><i class="fab fa-instagram"></i></a></span>
             <span><a href="#"><i class="fab fa-github"></i></a></span>
@@ -33,7 +33,7 @@
           
         </div>
       </div>
-      <div class="row py-5">
+      <div class="row py-3">
         <div class="col-sm">
           <ul class="list-unstyled">
             <li>&copy; 2020 Copyright <a href="{% url 'home' %}">letsflyonthewebsky.com</a> </li>
