--- a/templates/newsletters/newsletter_form.html
+++ b/templates/newsletters/newsletter_form.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       
-      <button type="submit" class="btn btn-success">SUBMIT</button>
+      <button type="submit" class="btn btn-success">CREATE</button>
     </form>
     
     </div>
