--- a/static/css/base.css
+++ b/static/css/base.css
@@ -27,11 +27,6 @@ body {
     margin-left: auto;
 }
 
-.card-img-right {
-	height: 100%;
-	border-radius: 0 3px 3px 0;
-}
-  
 .flex-auto {
 	-ms-flex: 0 0 auto;
 	-webkit-box-flex: 0;
@@ -56,10 +51,17 @@ body {
     }
 }
 
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: .75rem 1.25rem;
+  background-color: #fff;
+  /* border: 1px solid rgba(0,0,0,.125); */
+}
 /* END blog-main */
 /* Header */
 .sticky-nav {
-  min-height: 10vh;
+  width: 100%;
   z-index: 10;
 }
 .sticky {
@@ -90,7 +92,7 @@ a:hover {
 .make-me-sticky {
 	position: -webkit-sticky;
 	position: sticky;
-	top: 10vh;
+	top: 100px;
   	/* padding: 0 10px; */
 }
 /* END Sidebar: make-me-sticky  */
@@ -105,42 +107,55 @@ a:hover {
 	font-size: 1.1rem;
 	color: #999;
 }
-  
-  @media (min-width: 40em) {
+.card-img-top {
+  width: 100%;
+  max-height: 300px;
+  object-fit:cover;
+}
+
+.rounded-circle {
+  top: 50%;
+  left: 50%;
+  max-height: 156px;
+  max-width: 156px;
+  border-radius: 50%;
+  border: 3px solid;
+}
+@media (min-width: 40em) {
 	.card-title {
 	  font-size: 2rem;
 	}
   }
   
   /* Pagination */
-  .blog-pagination {
+.blog-pagination {
 	margin-bottom: 4rem;
-  }
-  .blog-pagination > .btn {
+}
+.blog-pagination > .btn {
 	border-radius: 2rem;
-  }
+}
   
   /*
    * Blog posts
    */
-  .blog-post {
+.blog-post {
 	margin: 3%;
 	margin-bottom: 4rem;
-  }
+}
  
   /*
    * Footer
    */
-  .blog-footer {
+.blog-footer {
 	padding: 2.5rem 0;
 	color: #000000;
 	text-align: center;
 	background-color: #fcfcfc;
 	border-top: .05rem solid #e5e5e5;
-  }
-  .blog-footer p:last-child {
+}
+.blog-footer p:last-child {
 	margin-bottom: 0;
-  }
+}
 
 
 
