--- a/templates/blog/search_results.html
+++ b/templates/blog/search_results.html
@@ -2,6 +2,7 @@
 
 {% block page_content %}
 
+{% if post_list %}
 <div class="container-fluid">
     <div class="row">
   
@@ -39,4 +40,10 @@
   {% endif %}
   
   </div>
+  {% else %}
+  <center>
+    <h5>Oops!No post found</h5>
+  </center>
+  
+  {% endif %}
 {% endblock %}
