--- a/templates/control_base.html
+++ b/templates/control_base.html
@@ -17,6 +17,9 @@
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
   </head>
   <body>
+    <div class="container-fluid">
+
+    
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="{% url 'newsletter-list' %}">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,14 +41,14 @@
     </form>
   </div>
 </nav>
-
+</div>
 <main role="main" class="container">
   {% block page_content %}
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-12 col-md-8 offset-md-2">
           <h1>{% block title %}{% endblock %}</h1>
-          <hr>
+
       </div>
   </div>
     <div class="row">
