--- a/templates/newsletters/newsletter_control_edit.html
+++ b/templates/newsletters/newsletter_control_edit.html
@@ -1,13 +1,13 @@
 {% extends 'control_base.html' %}
 
-{% block page_content %}
+{% block page_control %}
 <div class="container">
     <div class="row">
       <div class="col-md-12">
           {% block form %}
             {% include 'newsletters/newsletter_form.html' %}
-          {% endblock %}
+          {% endblock form %}
       </div>
     </div>
 </div>
-{% endblock page_content %}
+{% endblock page_control %}
