--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -6,30 +6,24 @@
   <h1 class="text-center">ABOUT ME</h1>
 </div>
 
-{% for data in about_instance %}
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card about-card">
-        
-        <div class="card-img-block">
-          <img class="img-fluid" src="{{ data.profile_pic.url }}" alt="Card image cap">
-        </div>
-        <div class="card-body pt-5">
-          <img src="{{ data.profile_pic.url }}" alt="profile-image" class="profile"/>
-          <h3 class="card-title">{{ data.name }}</h3>
-          <small>
-            <h5>{{ data.title }}</h5>
-          </small>
-          <p class="card-text">{{ data.description }}</p>
-          <div class="icon-block">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"> <i class="fab fa-twitter"></i></a>
-            <a href="#"> <i class="fab fa-google-plus"></i></a>
+{% for about_entry in about_instance %}
+<div class="card">
+  <div class="card-body">
+      <div class="row">
+          <div class="col-md-4 py-3">
+              <img class="rounded-circle mx-auto d-block mb-3" src="{{ about_entry.profile_pic.url }}" alt="">
+              <small class="text-center">{{ about_entry.bio }}</small>
           </div>
-        </div>
+          <div class="col-md-8 py-3">
+              <h3 class="card-title">{{ about_entry.name }}</h3>
+              <h5 class="card-subtitle text-muted">{{ about_entry.title }}</h5>
+              
+              <hr>
+              <p class="card-text">{{ about_entry.description }}</p>
+              <a href="{% url 'contact' %}" class="blog-home__cta">Contact</a>
+          </div>
+          
       </div>
-    </div>
   </div>
 </div>
 {% endfor %}
