--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -11,7 +11,7 @@
 {% block page_content %}
 
 <!-- Hero Section-->
-<section style="background-image: url('media/images/web1.jpg'); background-size: cover; background-position: center center" class="hero">
+<section style="background-image: url('media/images/web11.jpg'); background-size: cover; background-position: center center" class="hero">
   <div class="container">
     <div class="row">
       <div class="col-lg-8">
@@ -87,7 +87,7 @@
 </section>
 
  <!-- Divider Section-->
- <section style="background: url('/media/images/web11.jpg'); background-size: cover; background-position: center bottom" class="divider">
+ <section style="background: url('media/images/web3.jpg'); background-size: cover; background-position: center bottom" class="divider">
   <div class="container">
     <div class="row">
       <div class="col-md-7">
