--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -30,10 +30,11 @@ strong {
   a,
   i,
   span {
+	color: rgb(19, 19, 19);
 	display: inline-block;
 	text-decoration: none;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
+	-webkit-transition: 0.4s ease all;
+	transition: 0.4s ease all;
   }
   
   a:hover, a:focus,
@@ -71,15 +72,15 @@ strong {
   
   main,
   aside {
-	padding: 50px 0 100px;
+	padding: 30px 0 50px;
   }
   
   h1 a {
 	margin-left: 10px;
 	font-size: 0.9em;
 	opacity: 0;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
+	-webkit-transition: 0.4s ease all;
+	transition: 0.4s ease all;
 	color: #555;
 	text-decoration: none;
   }
@@ -88,172 +89,86 @@ strong {
 	opacity: 1;
   }
   
-  .page-header {
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background: #fafafa;
-	margin-top: 30px;
-  }
-  
-  .page-header h2 {
-	margin-bottom: 0;
-  }
-  
-  .animsition {
-	z-index: 9999;
-  }
-  
+   
   .widget {
-	margin-bottom: 40px;
-	padding: 30px;
-	border: 1px solid #eee;
+	margin-bottom: 30px;
+	padding: 20px;
+	background: #fff;
+	border: 1px solid rgb(197, 197, 199);
   }
   
-  .widget header {
-	margin-bottom: 20px;
+  .widget.search .form-group {
+	position: relative;
   }
   
-  .category a {
-	color: #999;
-	letter-spacing: 0.08em;
-	font-weight: 700;
-	text-transform: uppercase;
+  .widget.search input {
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	border: none;
+	border-bottom: 1px solid #ddd;
+	font-size: 0.95em;
+	font-family: "Open Sans", sans-serif;
+	font-weight: 400;
+	background: none;
+  }
+  
+  .widget.search input::-moz-placeholder {
+	color: #aaa;
+	font-family: "Open Sans", sans-serif;
+  }
+  
+  .widget.search input::-webkit-input-placeholder {
+	color: #aaa;
+	font-family: "Open Sans", sans-serif;
+  }
+  
+  .widget.search input:-ms-input-placeholder {
+	color: #aaa;
+	font-family: "Open Sans", sans-serif;
+  }
+  
+  .widget.search .submit {
+	height: 40px;
+	padding: 0;
+	line-height: 40px;
+	background: none;
+	border: none;
+	color: #555;
+	font-size: 0.9em;
+	position: absolute;
+	top: 0;
+	right: 0;
+  }
+  
+  .widget.latest-posts a {
+	display: block;
+	color: #555;
 	text-decoration: none;
-	font-size: 13px;
   }
   
-  .category a::after {
-	content: ',';
-	color: #ddd;
-	display: inline-block;
-	margin-right: 5px;
-  }
-  
-  .category a:last-of-type::after {
-	display: none;
-  }
-  
-  .category a:hover {
+  .widget.latest-posts a:hover {
 	color: #000;
   }
   
-  i[class*="icon-"] {
-	-webkit-transform: translateY(3px);
-	transform: translateY(3px);
+  .widget.latest-posts .image {
+	min-width: 60px;
+	max-width: 60px;
+	height: 60px;
+	overflow: hidden;
+	margin-right: 20px;
   }
   
-  #style-switch-button {
-	z-index: 9999 !important;
-  }
-  .no-padding {
-	padding: 0 !important;
+  .widget.latest-posts .item {
+	margin-bottom: 20px;
   }
   
-  .no-padding-bottom {
-	padding-bottom: 0 !important;
-  }
-  
-  .no-padding-top {
-	padding-top: 0 !important;
-  }
-  
-  .no-margin {
-	margin: 0 !important;
-  }
-  
-  .no-margin-bottom {
-	margin-bottom: 0 !important;
-  }
-  
-  .no-margin-top {
-	margin-top: 0 !important;
-  }
-  
-  .padding-small {
-	padding: 100px 0;
-  }
-  
-  .btn {
-	border-radius: 0 !important;
-  }
-  
-  .badge {
-	font-weight: 300;
-  }
-  
-  .badge-rounded {
-	border-radius: 50px;
-  }
-  
-  .heading-light {
-	font-weight: 300 !important;
-  }
-  
-  .heading-medium {
-	font-weight: 400 !important;
+  .widget.latest-posts strong {
+	font-size: 0.95em;
+	display: block;
+	line-height: 1em;
   }
 
-  .text-primary {
-	color: #999 !important;
-  }
-  
-  p.text-hero {
-	font-size: 1.2em;
-  }
-  
-  p.text-hero i {
-	font-size: 1.2em;
-  }
-  
-  p.small-text-hero {
-	font-size: 1em;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-	margin-bottom: 15px;
-  }
-  .text-big {
-	font-size: 1.4em;
-	font-weight: 300;
-	line-height: 1.8em;
-	color: #111;
-  }
-  
-  a.hero-link {
-	color: inherit !important;
-	text-transform: uppercase;
-	font-size: 1em;
-	text-decoration: none !important;
-	margin-top: 20px;
-	font-weight: 300;
-  }
-  
-  a.hero-link::after {
-	content: '';
-	width: 100%;
-	height: 1px;
-	display: block;
-	background: #fff;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-  }
-  
-  a.hero-link:hover {
-	color: #999 !important;
-  }
-  
-  a.hero-link:hover::after {
-	background: #999;
-  }
-  
-  div[class*="-btn"] {
-	cursor: pointer;
-  }
 
   section.hero {
 	padding: 0;
@@ -291,139 +206,7 @@ strong {
 	}
   }
 
-/*
-* ==========================================================
-*     FEATURED POSTS SECTION
-* ==========================================================
-*/
-section.featured-posts .row:nth-of-type(odd) .text {
-	background: #fafafa;
-  }
-  
-  section.featured-posts .row:last-of-type {
-	margin-bottom: 0;
-  }
-  
-  section.featured-posts p {
-	font-weight: 400;
-	color: #777;
-	font-size: 0.95em;
-  }
-  
-  section.featured-posts .text-inner {
-	padding: 70px 30px;
-	height: 100%;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-  }
-  
-  section.featured-posts a {
-	color: inherit;
-	text-decoration: none;
-  }
-  
-  section.featured-posts h2 {
-	line-height: 1.1em;
-	color: #333;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-  }
-  
-  section.featured-posts h2:hover {
-	color: #555;
-  }
-  
-  section.featured-posts .avatar {
-	max-width: 40px;
-	min-width: 40px;
-	height: 40px;
-	overflow: hidden;
-	border-radius: 50%;
-	margin-right: 10px;
-  }
-  
-  section.featured-posts .title,
-  section.featured-posts .date,
-  section.featured-posts .comments {
-	font-size: 0.8em;
-	font-weight: 400;
-	color: #999;
-  }
-  
-  section.featured-posts .title i,
-  section.featured-posts .date i,
-  section.featured-posts .comments i {
-	margin-right: 5px;
-  }
-  
-  section.featured-posts .title::after,
-  section.featured-posts .date::after,
-  section.featured-posts .comments::after {
-	content: '|';
-	display: inline-block;
-	margin: 0 7px;
-	font-size: 0.9em;
-	color: #ccc;
-  }
-  
-  section.featured-posts .comments::after {
-	display: none;
-  }
-  
-  section.featured-posts .image {
-	max-height: 200px;
-	width: auto;
-	overflow: hidden;
-	padding: 0;
-  }
-  
-  section.featured-posts .image img {
-	height: 100%;
-  }
-  
-  section.featured-posts .post-header {
-	margin-bottom: 10px;
-  }
-  
-  section.featured-posts .post-footer {
-	margin-top: 30px;
-  }
-  
-  /* Featured Posts Section Media Query ------------------------------------- */
-  @media (max-width: 991px) {
-	section.featured-posts .image {
-	  -webkit-box-ordinal-group: 2;
-	  -ms-flex-order: 1;
-	  order: 1;
-	  max-height: 300px;
-	  min-height: auto !important;
-	}
-	section.featured-posts .image img {
-	  width: 100%;
-	  height: auto !important;
-	}
-	section.featured-posts .text {
-	  -webkit-box-ordinal-group: 3;
-	  -ms-flex-order: 2;
-	  order: 2;
-	}
-  }
-  
-  @media (max-width: 575px) {
-	section.featured-posts .post-footer {
-	  font-size: 0.9em;
-	}
-  }
-  
-  @media (max-width: 350px) {
-	section.featured-posts .text-inner {
-	  padding: 15px;
-	}
-	section.featured-posts .post-footer {
-	  font-size: 0.75em;
-	}
-  }
-  
+ 
   /*
   * ==========================================================
   *     DIVIDER SECTION
@@ -433,142 +216,7 @@ section.featured-posts .row:nth-of-type(odd) .text {
 	color: #fff;
   }
   
-  /*
-  * ==========================================================
-  *     LATEST SECTION
-  * ==========================================================
-  */
-  section.latest-posts header {
-	margin-bottom: 50px;
-  }
   
-  .post-meta {
-	margin: 10px 0;
-	font-size: 0.8em;
-  }
-  
-  .post-meta .date {
-	text-transform: uppercase;
-	font-weight: 400;
-  }
-  
-  .post-meta .date::after {
-	display: none;
-  }
-  
-  .post p:not(.lead) {
-	font-weight: 400;
-	color: #777;
-	font-size: 0.95em;
-  }
-  
-  .post a {
-	text-decoration: none;
-  }
-  
-  .post a:hover, .post a:focus {
-	text-decoration: none;
-  }
-  
-  .post h3 {
-	line-height: 1.1em;
-	color: #222;
-	-webkit-transition: all 0.3s;
-	transition: all 0.3s;
-	margin-bottom: 1rem;
-  }
-  
-  .post h3:hover {
-	color: #555;
-  }
-  
-  .post .category a {
-	color: #999;
-	letter-spacing: 0.05em;
-	font-weight: 700;
-	text-transform: uppercase;
-	text-decoration: none;
-  }
-  
-  .post .date {
-	letter-spacing: 0.05em;
-	font-weight: 400;
-	text-transform: uppercase;
-	color: #aaa;
-  }
-  
-  .post .avatar {
-	max-width: 40px;
-	min-width: 40px;
-	height: 40px;
-	overflow: hidden;
-	border-radius: 50%;
-	margin-right: 10px;
-  }
-  
-  .post .title,
-  .post .date,
-  .post .comments,
-  .post .views {
-	font-weight: 400;
-	color: #999;
-	text-transform: capitalize;
-  }
-  
-  .post .title i,
-  .post .date i,
-  .post .comments i,
-  .post .views i {
-	margin-right: 5px;
-	font-size: 1.1em;
-  }
-  
-  .post .title::after,
-  .post .date::after,
-  .post .comments::after,
-  .post .views::after {
-	content: '|';
-	display: inline-block;
-	margin: 0 7px;
-	font-size: 0.9em;
-	color: #ccc;
-  }
-  
-  .post .post-tags {
-	margin-top: 30px;
-  }
-  
-  .post .post-tags .tag {
-	padding: 5px 25px;
-	border: 1px solid #ddd;
-	margin: 5px;
-	color: #777;
-	font-size: 0.75em;
-	text-transform: uppercase;
-	font-weight: 600;
-	text-decoration: none;
-	border-radius: 50px;
-  }
-  
-  .post .post-tags .tag:hover {
-	background: #999;
-	color: #fff;
-	border-color: #999;
-  }
-  
-  .post .meta-last::after {
-	display: none;
-  }
-  
-  /* Latest Posts Section Media Query ------------------------------------- */
-  @media (max-width: 767px) {
-	.post {
-	  margin-bottom: 40px;
-	}
-	.post:last-of-type {
-	  margin-bottom: 0;
-	}
-  }
   
   /* END STYLING */
 .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
@@ -602,13 +250,13 @@ section.featured-posts .row:nth-of-type(odd) .text {
     }
 }
 
-.list-group-item {
+/* .list-group-item {
   position: relative;
   display: block;
   padding: .75rem 1.25rem;
   background-color: #fff;
-  /* border: 1px solid rgba(0,0,0,.125); */
-}
+  
+} */
 ul {
 	list-style-type: none;
 }
@@ -670,20 +318,10 @@ a:hover {
 }
 
 .card{
-	padding: .5em;
+	padding: 10px;
 	background: #fff;
   	-webkit-transition: all 0.4s ease;
   	transition: all 0.4s ease;
-}
-.anim-card{
-	margin: 1.5em;
-  	padding: 10px;
-	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-	-webkit-transition: all 0.4s ease;
-	transition: all 0.4s ease;
-}
-.anim-card:hover{
-	transform: scale(1.05)
 }
 .card-title {
 	margin-bottom: 0;
@@ -737,7 +375,7 @@ a:hover {
   
   /* Pagination */
 .blog-pagination {
-	margin-bottom: 4rem;
+	margin-bottom: 2rem;
 }
 .blog-pagination > .btn {
 	border-radius: 2rem;
@@ -747,20 +385,23 @@ a:hover {
    */
 .blog-post {
 	margin: 3%;
-	margin-bottom: 4rem;
 }
   /*
    * Footer
    */
 .blog-footer {
-	padding: 2.5rem 0;
-	color: #000000;
+	margin-top: 100px;
+	padding: 50px 0;
+	color: rgb(24, 23, 23);
 	text-align: center;
-	background-color: #fcfcfc;
+	background-color: #a3a3a3;
 	border-top: .05rem solid #e5e5e5;
 }
 .blog-footer p:last-child {
 	margin-bottom: 0;
+}
+.blog-footer ul li a {
+	color: #fff;
 }
 .anywhere-link {
 	padding: 5px 10px;
