--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    
+    <script src="https://use.fontawesome.com/d6a626efdd.js"></script
     {% block head_extra %} {% endblock head_extra %}
 </head>
 <body>
@@ -39,7 +39,6 @@
           <div class="col-md-8 blog-main">
             <div class="blog-post">
 
-                
                 
             </div><!-- /.blog-post -->
 
@@ -68,5 +67,38 @@
   <script src="{% static 'js/jquery-3.5.0.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
+
+  <script>
+    $(document).ready(function(){
+      var $myForm = $('.my-ajax-form')
+      $myForm.submit(function(event){
+          event.preventDefault()
+          var $formData = $(this).serialize()
+          var $thisURL = $myForm.attr('data-url') || window.location.href // or set your own url
+          console.log($formData)
+          console.log($thisURL)
+          $.ajax({
+              method: "POST",
+              url: $thisURL,
+              data: $formData,
+              success: handleFormSuccess,
+              error: handleFormError,
+          })
+      });
+      
+      function handleFormSuccess(data, textStatus, jqXHR){
+          console.log(data)
+          console.log(textStatus)
+          console.log(jqXHR)
+          $myForm[0].reset(); // reset form data
+      }
+  
+      function handleFormError(jqXHR, textStatus, errorThrown){
+          console.log(jqXHR)
+          console.log(textStatus)
+          console.log(errorThrown)
+      };
+  });
+</script>
 </body>
 </html>
