--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -3,12 +3,12 @@
 {% load markdown_extras %}
 
 {% block head_title %}
-{{ instance.title }} | {{ block.super }}
+{{ post.title }} | {{ block.super }}
 {% endblock head_title %}
 
 
 {% block post_detail_link %}
-  <li><a href='{{ instance.get_absolute_url }}'>{{ instance.title }}</a></li>
+  <li><a href='{{ post.get_absolute_url }}'>{{ post.title }}</a></li>
 {% endblock %}
 
 {% block page_content %}
@@ -45,47 +45,23 @@
                 <div id="like-section">
                     {% include 'blog/like_section.html' %}
                 </div>
+                <div id="favourite-section">
+                  {% if is_favourite %}
+                  <a href="{% url 'favourite_post' slug=post.slug %}">
+                    <i class="fa fa-heart" style="color:red"></i>
+                  </a>
+                  {% else %}
+                  <a href="{% url 'favourite_post' slug=post.slug %}">
+                    <i class="fa fa-heart" style="color: black;"></i>
+                  </a>
+                  {% endif %}
+                </div>
+                <!-- Comment & Reply -->
+                
+                <div class="main-comment-section">
+                  {% include 'blog/comment_section.html' %}
+                </div>
                
-
-            <div>
-                <p class="lead">Leave a comment:</p>
-                <form method="POST" action=".">
-                    {% csrf_token %}
-                    {{ comment_form }}
-                    <input type="submit" value="Submit" class="btn btn-primary">
-                </form>
-                <hr>
-                {% for comment in comments %}
-                <blockquote>
-                    <p class="mb-0">{{ comment.content }}</p>
-                    <footer>
-                        <small> By {{ comment.user }} | {{comment.timestamp|timesince }} ago | {% if comment.children.count > 0 %} {{ comment.children.count }} Comment {% if comment.children.count > 1 %} {{ comment.children.count }} s {% endif %} | {% endif %}</small> <a class="comment-reply-btn" href="#">Reply</a> | <a class="" href="{{ comment.get_absolute_url }}">Thread</a> 
-                    </footer>
-                    <div class="comment-reply" style="display: none;">
-                        {% for child_comment in comment.children %}
-                        <blockquote>
-                            <p class="mb-0">{{ child_comment.content }}</p>
-                            <footer>
-                                <small> By {{ child_comment.user }} | {{child_comment.timestamp|timesince }} ago </small>
-                            </footer>
-                        </blockquote>
-                        {% endfor %}
-
-                        {% if request.user.is_authenticated %}
-                        
-                        <form method="POST" action="."> {% csrf_token %}
-                            {{ comment_form }}
-                            <input type="hidden" name="parent_id" value="{{ comment.id }}">
-                            <input type="submit" value="Reply" class="btn btn-default">
-                        </form>
-                        {% else %}
-                        <p>You must login to comment </p>
-                        {% endif %}
-                    </div>
-                </blockquote>
-                <hr>
-                {% endfor %}
-            </div>
             </div>
             </div>
         </div>
